fichier modifier pour integrer une deuxieme partie de l'excercice

--- a/index.html
+++ b/index.html
@@ -65,6 +65,58 @@
                </div>
            </div>
        </section>
+
+       <section class="slider">
+           <h1>slideshow</h1>
+           <div class="slider-container">
+               <div class="slider-container-content">
+                    <div class="slider-flex" id="elements">
+                        <div class="slider-flex-content">
+                                <div class="slider-flex-content-image">
+                            <img src="https://images.pexels.com/photos/1833349/pexels-photo-1833349.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="sushi">
+                                </div>
+                                <div class="slider-flex-content-caption">
+                            <h2>produit</h2>
+                            <p>Lorem ipsum dolor sit amet
+                               consectetur adipisicing elit. 
+                               Est excepturi neque maiores!
+                             </p>
+                                </div>
+                        </div>
+                        <div class="slider-flex-content">
+                                <div class="slider-flex-content-image">
+                            <img src="https://images.pexels.com/photos/6127334/pexels-photo-6127334.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="table">
+                                </div>
+                                <div class="slider-flex-content-caption">
+                             <h2>produit</h2>
+                             <p>Lorem ipsum dolor sit amet
+                                 consectetur adipisicing elit. 
+                                 Est excepturi neque maiores!
+                             </p>
+                                </div>
+                        </div>
+                        <div class="slider-flex-content">
+                        <div class="slider-flex-content-image">
+                            <img src="https://images.pexels.com/photos/2555240/pexels-photo-2555240.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="salade">
+                        </div>
+                        <div class="slider-flex-content-caption">
+                             <h2>produit</h2>
+                             <p>Lorem ipsum dolor sit amet
+                                 consectetur adipisicing elit. 
+                                 Est excepturi neque maiores!
+                             </p>
+                        </div>
+                        </div>
+                    </div>
+ 
+                    <div class="slider-btn">
+                     <i class="fas fa-angle-left"></i>
+                     <i class="fas fa-angle-right"></i>
+                     <i class="far fa-stop-circle"></i>
+                    </div>
+               </div>  
+           </div>
+       </section>
    </main> 
    <script src="./js/main.js" type="module"></script>
 </body>
